<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Section de la barre d'outils avec le fond gradient -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/toolbar_gradient"
        android:padding="16dp"
        android:gravity="center_vertical">

        <!-- Logo -->
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/Logo"
            android:src="@drawable/logo"
            android:scaleType="centerCrop" />

        <!-- Texte -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TGHouses"

            android:textColor="@color/light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp" />
    </LinearLayout>

    <!-- Layout principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_background"
        android:padding="16dp">

        <!-- Texte d'introduction -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dw"
            android:textAlignment="center"

            android:textColor="@color/bleue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="8dp"
            android:scrollbars="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/r"
            android:textAlignment="center"
            android:textColor="@color/bleue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp" />
        <Spinner
            android:id="@+id/regionSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/regions_array"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/c"
            android:textAlignment="center"
            android:textColor="@color/bleue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp" />
        <Spinner
            android:id="@+id/citySpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/cities"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cbp"
            android:textAlignment="center"
            android:textColor="@color/bleue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp" />
        <Spinner
            android:id="@+id/priceSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/classes"/>
        <Button
            android:id="@+id/allVisitorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Main Page"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/secondaryColor"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
